Separated unit and integration tests; backed to jdk8; tuned logging, etc.